# robot_arm_project

./: .gitignore  README.md  arm_pick_place_metrics.csv  requirements.txt
data/runs/run_20260115_173031_00/: events.jsonl  summary.json
data/runs/run_20260115_173031_01/: events.jsonl  summary.json
data/runs/run_20260115_173031_02/: events.jsonl  summary.json
data/runs/run_20260115_173031_03/: events.jsonl  summary.json
data/runs/run_20260115_173031_04/: events.jsonl  summary.json
data/runs/run_20260115_173031_05/: events.jsonl  summary.json
data/runs/run_20260115_173031_06/: events.jsonl  summary.json
data/runs/run_20260115_173031_07/: events.jsonl  summary.json
data/runs/run_20260115_173031_08/: events.jsonl  summary.json
data/runs/run_20260115_173031_09/: events.jsonl  summary.json
data/runs/run_20260115_173032_10/: events.jsonl  summary.json
data/runs/run_20260115_173032_11/: events.jsonl  summary.json
data/runs/run_20260115_173032_12/: events.jsonl  summary.json
data/runs/run_20260115_173032_13/: events.jsonl  summary.json
data/runs/run_20260115_173032_14/: events.jsonl  summary.json
data/runs/run_20260115_173032_15/: events.jsonl  summary.json
data/runs/run_20260115_173032_16/: events.jsonl  summary.json
data/runs/run_20260115_173032_17/: events.jsonl  summary.json
data/runs/run_20260115_173032_18/: events.jsonl  summary.json
data/runs/run_20260115_173032_19/: events.jsonl  summary.json
docs/: architecture.md  decisions.md  experiment_protocol.md  failure_recovery.md  failure_recovery_table.md  state_machine.md
docs/architecture/: state_machine.mmd  system_architecture.mmd
docs/ppt/: slides.md
logs/: sample_metrics.csv
robot_arm_pick_place/: README.md
robot_arm_pick_place/.github/workflows/: ci.yml
robot_arm_pick_place/colcon_ws/: README.md  setup_env.sh
robot_arm_pick_place/colcon_ws/install/: local_setup.sh  setup.sh
robot_arm_pick_place/colcon_ws/install/arm_description/share/arm_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
robot_arm_pick_place/colcon_ws/install/arm_description/share/arm_description/cmake/: arm_descriptionConfig-version.cmake  arm_descriptionConfig.cmake
robot_arm_pick_place/colcon_ws/install/arm_description/share/arm_description/config/: README.md
robot_arm_pick_place/colcon_ws/install/arm_description/share/arm_description/environment/: ament_prefix_path.dsv  path.dsv
robot_arm_pick_place/colcon_ws/install/arm_description/share/arm_description/urdf/: arm.urdf.xacro
robot_arm_pick_place/colcon_ws/install/arm_gazebo/share/arm_gazebo/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
robot_arm_pick_place/colcon_ws/install/arm_gazebo/share/arm_gazebo/cmake/: arm_gazeboConfig-version.cmake  (+1 more)
robot_arm_pick_place/colcon_ws/install/arm_moveit_config/share/arm_moveit_config/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
robot_arm_pick_place/colcon_ws/install/arm_moveit_task/share/arm_moveit_task/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
robot_arm_pick_place/colcon_ws/log/: latest_build
robot_arm_pick_place/colcon_ws/src/arm_description/: CMakeLists.txt  package.xml
robot_arm_pick_place/colcon_ws/src/arm_description/config/: README.md
robot_arm_pick_place/colcon_ws/src/arm_description/urdf/: arm.urdf.xacro
robot_arm_pick_place/colcon_ws/src/arm_gazebo/: CMakeLists.txt  package.xml
robot_arm_pick_place/colcon_ws/src/arm_gazebo/config/: fastdds_no_shm.xml  ros2_controllers.yaml
robot_arm_pick_place/colcon_ws/src/arm_gazebo/launch/: bringup_all.launch.py
robot_arm_pick_place/colcon_ws/src/arm_gazebo/models/object_box/: model.config  model.sdf
robot_arm_pick_place/colcon_ws/src/arm_gazebo/models/object_box_black/: model.sdf
robot_arm_pick_place/colcon_ws/src/arm_gazebo/models/object_box_blue/: model.sdf
robot_arm_pick_place/colcon_ws/src/arm_gazebo/models/object_box_red/: model.sdf
robot_arm_pick_place/colcon_ws/src/arm_gazebo/worlds/: arm_world.world
robot_arm_pick_place/colcon_ws/src/arm_moveit_config/: CMakeLists.txt  package.xml
robot_arm_pick_place/colcon_ws/src/arm_moveit_config/config/: arm.srdf  controllers.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  ompl_planning.yaml  sensors_3d.yaml
robot_arm_pick_place/colcon_ws/src/arm_moveit_config/launch/: move_group.launch.py
robot_arm_pick_place/colcon_ws/src/arm_moveit_task/: CMakeLists.txt  package.xml  setup.cfg  setup.py
robot_arm_pick_place/colcon_ws/src/arm_moveit_task/arm_moveit_task/: __init__.py  color_detector_node.py  grasp_candidate_node.py  perception_node.py  pick_place_task.py  pose_estimator_node.py
robot_arm_pick_place/colcon_ws/src/arm_moveit_task/test/: test_smoke_launch.py
robot_arm_pick_place/diagrams/: architecture.mmd  state_machine.mmd  topics_services.md
robot_arm_pick_place/scripts/: make_report.md  parse_metrics.py
scripts/: build_slides.sh  generate_pptx.py  make_plots.py  parse_metrics.py  plot_metrics.py  render_diagrams.sh  run_demo.sh  run_experiments.py  setup_env.sh
src/fail_aware_bringup/: CMakeLists.txt  package.xml
src/fail_aware_bringup/launch/: sim.launch.py
src/fail_aware_task_manager/: CMakeLists.txt  package.xml
src/fail_aware_task_manager/include/fail_aware_task_manager/: task_manager.hpp
src/fail_aware_task_manager/src/: task_manager.cpp
src/pick_place_bringup/: package.xml  setup.py
src/pick_place_bringup/launch/: demo.launch.py
src/pick_place_moveit_config/: package.xml  setup.py
src/pick_place_moveit_config/config/: kinematics.yaml  moveit.rviz  ompl_planning.yaml  robot.urdf.xacro  simple_arm.srdf
src/pick_place_moveit_config/launch/: moveit.launch.py
src/pick_place_task/: package.xml  setup.py
src/pick_place_task/config/: pick_place_params.yaml
src/pick_place_task/launch/: pick_place.launch.py
src/pick_place_task/pick_place_task/: pick_place_state_machine.py
(+39 files in other folders)
