<?xml version="1.0"?>
<package format="3">
  <name>fail_aware_bringup</name>
  <version>0.1.0</version>
  <description>Launch files for fail-aware manipulation demo.</description>
  <maintainer email="you@example.com">Portfolio Owner</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>fail_aware_task_manager</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
