<?xml version="1.0"?>
<package format="3">
  <name>fail_aware_task_manager</name>
  <version>0.1.0</version>
  <description>Fail-aware pick and place task manager with recovery FSM.</description>
  <maintainer email="you@example.com">Portfolio Owner</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
