<?xml version="1.0"?>
<package format="3">
  <name>pick_place_bringup</name>
  <version>0.1.0</version>
  <description>Bringup launch files for pick and place demo.</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>pick_place_task</exec_depend>
  <exec_depend>pick_place_moveit_config</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
