<?xml version="1.0"?>
<package format="3">
  <name>pick_place_task</name>
  <version>0.1.0</version>
  <description>Pick and place state machine with MoveIt2 integration.</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>moveit2_py</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
