<?xml version="1.0"?>
<package format="3">
  <name>arm_description</name>
  <version>0.1.0</version>
  <description>URDF/Xacro description for the 6-DoF arm and gripper.</description>
  <maintainer email="dev@example.com">Dev</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
</package>
