<?xml version="1.0"?>
<package format="3">
  <name>arm_gazebo</name>
  <version>0.1.0</version>
  <description>Gazebo Classic integration and bringup launch for the arm.</description>
  <maintainer email="dev@example.com">Dev</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros2_control</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>ros2controlcli</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>arm_description</exec_depend>
  <exec_depend>arm_moveit_config</exec_depend>
  <exec_depend>arm_moveit_task</exec_depend>
</package>
