<?xml version="1.0"?>
<package format="3">
  <name>arm_moveit_config</name>
  <version>0.1.0</version>
  <description>MoveIt2 configuration package for the arm.</description>
  <maintainer email="dev@example.com">Dev</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>moveit_ros_planning</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>moveit_ros_visualization</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>arm_description</exec_depend>
  <exec_depend>xacro</exec_depend>
</package>
